Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2093

Plugin API doesn't check stat bounds on creation which can cause assert to trigger

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 3.3.5
    • None

    Description

      The records created for stats for the API are limited by TS_MAX_API_STATS. Trying to create more than that causes an assert to trigger.

      This problem should be superseded by TS-454

      Attachments

        Activity

          People

            psudaemon Phil Sorber
            psudaemon Phil Sorber
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: