TS-2093: Check bounds on plugin stat creation.